Week6/CapstoneProject/ecomm-capstone/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecomm-ingress
  namespace: prod
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: <YOUR_ACM_CERT_ARN>
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /inventory
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
